# NeuralNetworkAccelerator

./: .gitignore
NeuralNetworkC++/: CMakeLists.txt  Makefile
NeuralNetworkC++/src/: create_data.cpp  create_data.hpp  graph.cpp  graph.hpp  main.cpp  nn.cpp  nn.hpp  template.cpp  template.hpp  train.cpp  train.hpp  weight.cpp  weight.hpp  weight_generator.cpp  weight_generator.hpp
Simulink/: PE.slx
Simulink/netlist/: ProjectGeneration.tcl  vivado.jou  vivado_271992.backup.jou  vivado_273532.backup.jou  vivado_278176.backup.jou
Simulink/netlist/ip/: component.xml
Simulink/netlist/ip/hdl/: pe.v
Simulink/netlist/ip/pe_floating_point_v7_1_i0/: pe_floating_point_v7_1_i0.xci
Simulink/netlist/ip_catalog/: pe.xpr
Simulink/netlist/sysgen/: pe_mod.v  pe_stub.v  pe_tb.v  pe_tb_mod.v  vivado_ip.tcl
Vivado/NNA/: NNA.xpr
Vivado/NNA/NNA.cache/wt/: cpd.wdf  gui_handlers.wdf  java_command_handlers.wdf  synthesis.wdf  webtalk_pa.xml
Vivado/NNA/NNA.runs/.jobs/: vrs_config_4.xml  vrs_config_6.xml  vrs_config_7.xml  vrs_config_8.xml
Vivado/NNA/NNA.runs/config_mpsoc_auto_ds_0_synth_1/: config_mpsoc_auto_ds_0.dcp  config_mpsoc_auto_ds_0.tcl  config_mpsoc_auto_ds_0.vds  config_mpsoc_auto_ds_0_utilization_synth.pb  config_mpsoc_auto_ds_0_utilization_synth.rpt  dont_touch.xdc  gen_run.xml  htr.txt  vivado.jou  vivado.pb
Vivado/NNA/NNA.runs/config_mpsoc_auto_ds_1_synth_1/: .vivado.begin.rst  config_mpsoc_auto_ds_1.tcl  config_mpsoc_auto_ds_1.vds  dont_touch.xdc  gen_run.xml  htr.txt  rundef.js  runme.sh  vivado.jou  vivado.pb
Vivado/NNA/NNA.runs/impl_1/: gen_run.xml  (+30 more)
(+464 files in other folders)
